erDiagram
  USERS {
    uuid id
    text email
    text name
    text role
    text discord_webhook_url
    boolean is_active
    timestamptz created_at
    timestamptz updated_at
    text password
  }

  CATEGORIES {
    smallint id
    text name
    text value
    smallint sort_order
    boolean is_active
    timestamptz created_at
  }

  MENUS {
    bigint id
    smallint category_id
    text name
    text description
    integer price
    text img
    boolean only_ice
    boolean is_sold_out
    boolean is_active
    jsonb tags
    timestamptz created_at
    timestamptz updated_at
  }

  MENU_PRICE_HISTORY {
    bigint id
    bigint menu_id
    integer old_price
    integer new_price
    uuid changed_by
    timestamptz changed_at
  }

  CARTS {
    uuid id
    uuid user_id
    text status
    timestamptz created_at
    timestamptz updated_at
  }

  CART_ITEMS {
    bigint id
    uuid cart_id
    bigint menu_id
    integer quantity
    integer unit_price
    boolean is_hot
    boolean is_shot
    boolean is_whip
    boolean is_syrup
    boolean is_milk
    boolean is_peorl
  }

  ORDERS {
    uuid id
    uuid user_id
    integer total_price
    text status
    text payment_method
    text external_id
    text admin_note
    text cancelled_reason
    uuid assigned_to
    timestamptz paid_at
    timestamptz created_at
    timestamptz updated_at
  }

  ORDER_ITEMS {
    bigint id
    uuid order_id
    bigint menu_id
    text name_snapshot
    integer price_snapshot
    integer quantity
    boolean is_hot
    boolean is_shot
    boolean is_whip
    boolean is_syrup
    boolean is_milk
    boolean is_peorl
  }

  WEBHOOK_ENDPOINTS {
    bigint id
    text name
    text channel
    text url
    boolean is_active
    timestamptz created_at
  }

  NOTIFICATIONS {
    bigint id
    bigint endpoint_id
    text event_type
    jsonb payload
    text status
    integer response_code
    timestamptz created_at
    timestamptz sent_at
  }

  EVENT_LOGS {
    bigint id
    uuid user_id
    text event_type
    text entity_type
    text entity_id
    text level
    jsonb payload
    text request_id
    text ip
    timestamptz created_at
  }

  USERS ||--o{ CARTS : user_id
  CARTS ||--o{ CART_ITEMS : cart_id
  MENUS ||--o{ CART_ITEMS : menu_id

  CATEGORIES ||--o{ MENUS : category_id
  MENUS ||--o{ MENU_PRICE_HISTORY : menu_id
  USERS ||--o{ MENU_PRICE_HISTORY : changed_by

  USERS ||--o{ ORDERS : user_id
  USERS ||--o{ ORDERS : assigned_to
  ORDERS ||--o{ ORDER_ITEMS : order_id
  MENUS ||--o{ ORDER_ITEMS : menu_id

  USERS ||--o{ EVENT_LOGS : user_id
  WEBHOOK_ENDPOINTS ||--o{ NOTIFICATIONS : endpoint_id